--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class= "aurora">
 			<a href="https://www.youtube.com/watch?v=d_HlPboLRL8">
-						<img class="pieces" src="./pics_1/aurora.png" alt="Aurora" height="200px" width="200px">
+						<img class="pieces" src="./pics_1/Aurora.png" alt="Aurora" height="200px" width="200px">
 					</a>
 		</div>
 		<div class= "americanfable">
